force-app/main/default/objects/Load__c/Load__c.object-meta.xml
<CustomObject>
    <description>Freight loads managed between Loadsmart (shipper) and KWB Logistics (carrier)</description>
    <externalDataSource></externalDataSource>
    <externalRepository>false</externalRepository>
    <isTranslatable>false</isTranslatable>
    <label>Load</label>
    <nameField>
        <label>Load Number</label>
        <type>AutoNumber</type>
        <displayFormat>LOAD-{0000000}</displayFormat>
    </nameField>
    <pluralLabel>Loads</pluralLabel>
    <quickActionList>
        <quickAction>FeedItem.ContentPost</quickAction>
        <quickAction>FeedItem.ContentNote</quickAction>
        <quickAction>FeedItem.LinkPost</quickAction>
    </quickActionList>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>