force-app/main/default/objects/Load__c/fields/Accessorials__c.field-meta.xml
<CustomField>
    <fullName>Accessorials__c</fullName>
    <description>Additional charges (tarping, detention, etc.)</description>
    <label>Accessorials</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>