force-app/main/default/objects/Load__c/fields/Actual_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Time__c</fullName>
    <label>Actual Delivery Time</label>
    <type>DateTime</type>
</CustomField>