force-app/main/default/objects/Load__c/fields/Actual_Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pickup_Time__c</fullName>
    <label>Actual Pickup Time</label>
    <type>DateTime</type>
</CustomField>