force-app/main/default/objects/Load__c/fields/Alvys_Load_Number__c.field-meta.xml
<CustomField>
    <fullName>Alvys_Load_Number__c</fullName>
    <description>Legacy Alvys load number for reference/migration purposes</description>
    <externalId>true</externalId>
    <label>Alvys Load Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>