force-app/main/default/objects/Load__c/fields/Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate__c</fullName>
    <description>Rate billed to shipper</description>
    <label>Billing Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>