force-app/main/default/objects/Load__c/fields/BOL_Number__c.field-meta.xml
<CustomField>
    <fullName>BOL_Number__c</fullName>
    <label>BOL Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>