force-app/main/default/objects/Load__c/fields/BOL_PDF__c.field-meta.xml
<CustomField>
    <fullName>BOL_PDF__c</fullName>
    <description>Bill of Lading (BoL) PDF document</description>
    <label>BOL PDF</label>
    <type>Url</type>
</CustomField>