force-app/main/default/objects/Load__c/fields/Broker_Rate__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rate__c</fullName>
    <label>Broker Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>