force-app/main/default/objects/Load__c/fields/Broker_Rep__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Loads (Broker Rep)</relationshipLabel>
    <relationshipName>Loads_BrokerRep</relationshipName>
    <type>Lookup</type>
</CustomField>