force-app/main/default/objects/Load__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Carrier account assigned to execute this load (Account with Carrier record type)</description>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loads (Carrier)</relationshipLabel>
    <relationshipName>Loads_Carrier</relationshipName>
    <type>Lookup</type>
</CustomField>