force-app/main/default/objects/Load__c/fields/Carrier_Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Fuel_Surcharge__c</fullName>
    <description>Fuel surcharge paid to carrier</description>
    <label>Carrier Fuel Surcharge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>