force-app/main/default/objects/Load__c/fields/Carrier_Rate__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Rate__c</fullName>
    <description>Rate paid to carrier</description>
    <label>Carrier Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>