force-app/main/default/objects/Load__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>What is being shipped</description>
    <label>Commodity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>