force-app/main/default/objects/Load__c/fields/Commodity_Description__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Description__c</fullName>
    <description>Detailed commodity description and handling notes</description>
    <label>Commodity Description</label>
    <type>LongTextArea</type>
</CustomField>