force-app/main/default/objects/Load__c/fields/Continuous_Temp__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Temp__c</fullName>
    <description>Maintain temperature control throughout entire transit</description>
    <label>Continuous Temp Control</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>