force-app/main/default/objects/Load__c/fields/Cost_Per_Mile__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Mile__c</fullName>
    <description>Carrier rate divided by distance miles. Metric for cost efficiency (lower is better).</description>
    <formula>IF(OR(ISBLANK(Carrier_Rate__c), ISBLANK(Distance_Miles__c), Distance_Miles__c = 0), 0, Carrier_Rate__c / Distance_Miles__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Mile</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>