force-app/main/default/objects/Load__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>User who created the load record</description>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Loads (Created)</relationshipLabel>
    <relationshipName>Loads_Created</relationshipName>
    <type>Lookup</type>
</CustomField>