force-app/main/default/objects/Load__c/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <description>Timestamp when load record was created</description>
    <label>Created Date Time</label>
    <type>DateTime</type>
</CustomField>