force-app/main/default/objects/Load__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>