force-app/main/default/objects/Load__c/fields/Customer_Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Name__c</fullName>
    <description>Legal name for billing/invoicing purposes</description>
    <label>Customer Billing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>