force-app/main/default/objects/Load__c/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <description>Shipper-provided reference number for this load (e.g. ShipperGuide Quote ID, BOL reference)</description>
    <label>Customer Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>