force-app/main/default/objects/Load__c/fields/DAI_Price_At_Booking__c.field-meta.xml
<CustomField>
    <fullName>DAI_Price_At_Booking__c</fullName>
    <inlineHelpText>Diesel Average Index (DAI) price locked at time of booking. Used to calculate fuel surcharge. Once set, this price does not change to prevent disputes over final charges.</inlineHelpText>
    <label>DAI Price At Booking</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>