force-app/main/default/objects/Load__c/fields/Days_Until_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Pickup__c</fullName>
    <description>Number of days from today until scheduled pickup</description>
    <formula>INT(Pickup_Window_Begin__c - NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Pickup</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>