force-app/main/default/objects/Load__c/fields/Delivery_Company__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Company__c</fullName>
    <description>Receiver company name at delivery location</description>
    <label>Delivery Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>