force-app/main/default/objects/Load__c/fields/Delivery_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Confirmation__c</fullName>
    <description>Receiver confirmation number for delivery</description>
    <label>Delivery Confirmation #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>