force-app/main/default/objects/Load__c/fields/Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact__c</fullName>
    <description>Contact name/department at delivery location</description>
    <label>Delivery Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>