force-app/main/default/objects/Load__c/fields/Delivery_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phone__c</fullName>
    <description>Phone number at delivery location</description>
    <label>Delivery Phone</label>
    <type>Phone</type>
</CustomField>