force-app/main/default/objects/Load__c/fields/Delivery_Window_Actual_Begin__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window_Actual_Begin__c</fullName>
    <description>Actual delivery arrival time (captured from POD)</description>
    <label>Delivery Actual Begin</label>
    <type>DateTime</type>
</CustomField>