force-app/main/default/objects/Load__c/fields/Delivery_Window_Begin__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window_Begin__c</fullName>
    <description>Earliest delivery time from Loadsmart</description>
    <label>Delivery Window Begin</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>