force-app/main/default/objects/Load__c/fields/Delivery_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window_End__c</fullName>
    <description>Latest delivery time from Loadsmart</description>
    <label>Delivery Window End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>