force-app/main/default/objects/Load__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <description>Load dimensions (Length x Width x Height)</description>
    <label>Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>