force-app/main/default/objects/Load__c/fields/Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatcher</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Loads (Dispatcher)</relationshipLabel>
    <relationshipName>Loads_Dispatcher</relationshipName>
    <type>Lookup</type>
</CustomField>