force-app/main/default/objects/Load__c/fields/Distance_Miles__c.field-meta.xml
<CustomField>
    <fullName>Distance_Miles__c</fullName>
    <description>Estimated distance in miles from pickup to delivery</description>
    <label>Distance (Miles)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>