force-app/main/default/objects/Load__c/fields/Equipment_Length__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Length__c</fullName>
    <description>Equipment length (20&apos;, 40&apos;, 53&apos;, etc.)</description>
    <label>Equipment Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20ft</fullName>
                <label>20 ft</label>
            </value>
            <value>
                <fullName>40ft</fullName>
                <label>40 ft</label>
            </value>
            <value>
                <fullName>53ft</fullName>
                <default>true</default>
                <label>53 ft</label>
            </value>
            <value>
                <fullName>48ft</fullName>
                <label>48 ft</label>
            </value>
            <value>
                <fullName>45ft</fullName>
                <label>45 ft</label>
            </value>
            <value>
                <fullName>Flatbed</fullName>
                <label>Flatbed (Variable)</label>
            </value>
            <value>
                <fullName>Van</fullName>
                <label>Van (Variable)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>