force-app/main/default/objects/Load__c/fields/Equipment_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Subtype__c</fullName>
    <description>Equipment subtype detail (e.g. Regular Flatbed vs Stepdeck)</description>
    <label>Equipment Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Regular_Flatbed</fullName><default>false</default><label>Regular Flatbed</label></value>
            <value><fullName>Stepdeck</fullName><default>false</default><label>Stepdeck</label></value>
            <value><fullName>RGN</fullName><default>false</default><label>RGN (Removable Gooseneck)</label></value>
            <value><fullName>Conestoga</fullName><default>false</default><label>Conestoga</label></value>
            <value><fullName>Hotshot</fullName><default>false</default><label>Hotshot</label></value>
            <value><fullName>Standard_Van</fullName><default>false</default><label>Standard Van</label></value>
            <value><fullName>Standard_Reefer</fullName><default>false</default><label>Standard Reefer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>