force-app/main/default/objects/Load__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <description>Equipment needed (Flatbed, Van, Reefer, Tank)</description>
    <label>Equipment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>