force-app/main/default/objects/Load__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <label>Estimated Delivery</label>
    <type>DateTime</type>
</CustomField>