force-app/main/default/objects/Load__c/fields/Estimated_Delivery_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_DateTime__c</fullName>
    <description>Estimated delivery date/time (derived from pickup + transit time)</description>
    <label>Estimated Delivery DateTime</label>
    <type>DateTime</type>
</CustomField>