force-app/main/default/objects/Load__c/fields/Fleet__c.field-meta.xml
<CustomField>
    <fullName>Fleet__c</fullName>
    <description>KWB internal fleet assignment (optional)</description>
    <label>Fleet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>