force-app/main/default/objects/Load__c/fields/Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge__c</fullName>
    <description>Fuel surcharge component of billing rate</description>
    <label>Fuel Surcharge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>