force-app/main/default/objects/Load__c/fields/General_Instructions__c.field-meta.xml
<CustomField>
    <fullName>General_Instructions__c</fullName>
    <description>General loading, handling, or delivery instructions</description>
    <label>General Instructions</label>
    <type>LongTextArea</type>
</CustomField>