force-app/main/default/objects/Load__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <description>Gross profit margin (Total Shipper Charge - Total Carrier Cost)</description>
    <formula>Total_Shipper_Charge__c - Total_Carrier_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>