force-app/main/default/objects/Load__c/fields/Hazmat_Class__c.field-meta.xml
<CustomField>
    <fullName>Hazmat_Class__c</fullName>
    <description>DOT Hazmat Classification (required if load contains hazardous materials)</description>
    <label>Hazmat Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class_1</fullName>
                <label>Class 1 - Explosives</label>
            </value>
            <value>
                <fullName>Class_2</fullName>
                <label>Class 2 - Gases</label>
            </value>
            <value>
                <fullName>Class_3</fullName>
                <label>Class 3 - Flammable Liquids</label>
            </value>
            <value>
                <fullName>Class_4</fullName>
                <label>Class 4 - Flammable Solids</label>
            </value>
            <value>
                <fullName>Class_5</fullName>
                <label>Class 5 - Oxidizers</label>
            </value>
            <value>
                <fullName>Class_6</fullName>
                <label>Class 6 - Toxic/Poisons</label>
            </value>
            <value>
                <fullName>Class_7</fullName>
                <label>Class 7 - Radioactive</label>
            </value>
            <value>
                <fullName>Class_8</fullName>
                <label>Class 8 - Corrosives</label>
            </value>
            <value>
                <fullName>Class_9</fullName>
                <label>Class 9 - Miscellaneous</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>