force-app/main/default/objects/Load__c/fields/Invoice_As__c.field-meta.xml
<CustomField>
    <fullName>Invoice_As__c</fullName>
    <description>KWB entity name for invoicing (e.g., KWB LOGISTICS LLC)</description>
    <label>Invoice As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>