force-app/main/default/objects/Load__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Invoiced</fullName><default>false</default><label>Invoiced</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>