force-app/main/default/objects/Load__c/fields/Is_Exception__c.field-meta.xml
<CustomField>
    <fullName>Is_Exception__c</fullName>
    <description>Indicates if this load has an exception/issue requiring attention</description>
    <label>Is Exception</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>