force-app/main/default/objects/Load__c/fields/Is_Late__c.field-meta.xml
<CustomField>
    <fullName>Is_Late__c</fullName>
    <description>Indicates if actual delivery is later than the delivery window end time</description>
    <formula>IF(AND(NOT(ISNULL(Delivery_Window_Actual_Begin__c)), Delivery_Window_Actual_Begin__c > Delivery_Window_End__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Late</label>
    <type>Checkbox</type>
</CustomField>