force-app/main/default/objects/Load__c/fields/Last_Loadsmart_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Loadsmart_Sync__c</fullName>
    <description>Timestamp of last sync to Loadsmart</description>
    <label>Last Loadsmart Sync</label>
    <type>DateTime</type>
</CustomField>