force-app/main/default/objects/Load__c/fields/Legacy_Load_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Load_ID__c</fullName>
    <description>External load identifier from legacy system. Used for data migration via Salesforce Data Loader to match imported records during initial data migration.</description>
    <externalId>true</externalId>
    <label>Legacy Load ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>