force-app/main/default/objects/Load__c/fields/Linear_Feet__c.field-meta.xml
<CustomField>
    <fullName>Linear_Feet__c</fullName>
    <description>Linear feet of trailer space required (critical for flatbed loads)</description>
    <label>Linear Feet</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>