force-app/main/default/objects/Load__c/fields/Load_Number__c.field-meta.xml
<CustomField>
    <fullName>Load_Number__c</fullName>
    <label>Load Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>