force-app/main/default/objects/Load__c/fields/Load_Type__c.field-meta.xml
<CustomField>
    <fullName>Load_Type__c</fullName>
    <description>Type of load (Revenue, Non-Revenue, etc.)</description>
    <label>Load Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
                <default>true</default>
                <label>Revenue</label>
            </value>
            <value>
                <fullName>Non_Revenue</fullName>
                <label>Non-Revenue</label>
            </value>
            <value>
                <fullName>House_Account</fullName>
                <label>House Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>