force-app/main/default/objects/Load__c/fields/Loadsmart_Shipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Loadsmart_Shipment_ID__c</fullName>
    <description>UUID from Loadsmart shipment</description>
    <externalId>true</externalId>
    <label>Loadsmart Shipment ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>