force-app/main/default/objects/Load__c/fields/Loadsmart_Synced__c.field-meta.xml
<CustomField>
    <fullName>Loadsmart_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has carrier/rate been pushed back to Loadsmart?</description>
    <label>Loadsmart Synced</label>
    <type>Checkbox</type>
</CustomField>