force-app/main/default/objects/Load__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Billing Rate minus Carrier Rate</description>
    <formula>Billing_Rate__c -  Carrier_Rate__c</formula>
    <label>Margin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>