force-app/main/default/objects/Load__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <description>Margin as a percentage of billing rate</description>
    <formula>IF(Billing_Rate__c = 0, 0, (Margin__c / Billing_Rate__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>