force-app/main/default/objects/Load__c/fields/Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Modified_By__c</fullName>
    <description>User who last modified the load record</description>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Loads (Modified)</relationshipLabel>
    <relationshipName>Loads_Modified</relationshipName>
    <type>Lookup</type>
</CustomField>