force-app/main/default/objects/Load__c/fields/Modified_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Modified_DateTime__c</fullName>
    <description>Timestamp when load record was last modified</description>
    <label>Modified Date Time</label>
    <type>DateTime</type>
</CustomField>