force-app/main/default/objects/Load__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <description>Quantity of units in the load</description>
    <label>Number of Units</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>