force-app/main/default/objects/Load__c/fields/On_Time_Indicator__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Indicator__c</fullName>
    <description>Indicates whether the delivery was on time. Compares actual delivery to estimated delivery.</description>
    <formula>IF(
    ISBLANK(Delivery_Window_Actual_Begin__c),
    "Pending",
    IF(Delivery_Window_Actual_Begin__c &lt;= Estimated_Delivery_DateTime__c, "On Time", "Late")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Time Indicator</label>
    <type>Text</type>
</CustomField>