force-app/main/default/objects/Load__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Freight bill payment terms</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Prepaid</fullName><default>true</default><label>Prepaid</label></value>
            <value><fullName>Collect</fullName><default>false</default><label>Collect</label></value>
            <value><fullName>Third_Party</fullName><default>false</default><label>Third Party</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>