force-app/main/default/objects/Load__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <label>Pickup</label>
    <type>Address</type>
</CustomField>