force-app/main/default/objects/Load__c/fields/Pickup_Company__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Company__c</fullName>
    <description>Shipper company name at pickup location</description>
    <label>Pickup Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>