force-app/main/default/objects/Load__c/fields/Pickup_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Confirmation__c</fullName>
    <description>Shipper confirmation number for pickup</description>
    <label>Pickup Confirmation #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>