force-app/main/default/objects/Load__c/fields/Pickup_Contact__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact__c</fullName>
    <description>Contact name/department at pickup location</description>
    <label>Pickup Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>