force-app/main/default/objects/Load__c/fields/Pickup_Country__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Country__c</fullName>
    <description>Country of pickup location</description>
    <label>Pickup Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United_States</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>