force-app/main/default/objects/Load__c/fields/Pickup_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Phone__c</fullName>
    <description>Phone number at pickup location</description>
    <label>Pickup Phone</label>
    <type>Phone</type>
</CustomField>