force-app/main/default/objects/Load__c/fields/Pickup_Window_Actual_Begin__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Window_Actual_Begin__c</fullName>
    <description>Actual pickup time (captured from POD or dispatch)</description>
    <label>Pickup Actual Begin</label>
    <type>DateTime</type>
</CustomField>