force-app/main/default/objects/Load__c/fields/Pickup_Window_Begin__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Window_Begin__c</fullName>
    <description>Earliest pickup time from Loadsmart</description>
    <label>Pickup Window Begin</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>