force-app/main/default/objects/Load__c/fields/Pickup_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Window_End__c</fullName>
    <description>Latest pickup time from Loadsmart</description>
    <label>Pickup Window End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>