force-app/main/default/objects/Load__c/fields/POD_Captured__c.field-meta.xml
<CustomField>
    <fullName>POD_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POD Captured</label>
    <type>Checkbox</type>
</CustomField>