force-app/main/default/objects/Load__c/fields/Rate_Confirmation_PDF__c.field-meta.xml
<CustomField>
    <fullName>Rate_Confirmation_PDF__c</fullName>
    <description>Rate Confirmation PDF from Loadsmart</description>
    <label>Rate Confirmation PDF</label>
    <type>Url</type>
</CustomField>