force-app/main/default/objects/Load__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>Rate structure type (Flat Rate, Per Mile, etc.)</description>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat_Rate</fullName>
                <default>true</default>
                <label>Flat Rate</label>
            </value>
            <value>
                <fullName>Per_Mile</fullName>
                <label>Per Mile</label>
            </value>
            <value>
                <fullName>Per_Unit</fullName>
                <label>Per Unit</label>
            </value>
            <value>
                <fullName>Per_Pound</fullName>
                <label>Per Pound</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>