force-app/main/default/objects/Load__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <description>Receiver (Account lookup) - destination of freight</description>
    <label>Receiver</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loads (Receiver)</relationshipLabel>
    <relationshipName>Loads_Receiver</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>