force-app/main/default/objects/Load__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <label>Receiver Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>