force-app/main/default/objects/Load__c/fields/Receiver_State__c.field-meta.xml
<CustomField>
    <fullName>Receiver_State__c</fullName>
    <label>Receiver State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>