force-app/main/default/objects/Load__c/fields/Receiver_Zip__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Zip__c</fullName>
    <label>Receiver Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>